--- a/service/package.json
+++ b/service/package.json
@@ -4,5 +4,8 @@
     "express": "^5.1.0",
     "poker-evaluator": "^2.1.0",
     "uuid": "^11.1.0"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
