--- a/x_display/package.json
+++ b/x_display/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-app",
+  "name": "display",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,15 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.5",
-    "axios": "^1.9.0",
+    "flag-icons": "^7.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-router": "^7.6.0",
-    "react-router-dom": "^7.6.0",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5"
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
